--- a/st_flask/static/style.css
+++ b/st_flask/static/style.css
@@ -106,6 +106,8 @@ table tbody td {
     padding: 10px;
 }
 
+
+/*Phone compapibility*/
 @media (max-width: 768px) {
     .modem-row {
         flex-wrap: wrap;
@@ -117,6 +119,10 @@ table tbody td {
     }
 }
 
+
+
+
+/*Style for collapse/expand buttons*/
 .modem-details.collapsed {
     display: none;
 }
@@ -145,3 +151,46 @@ table tbody td {
 .collapsible-header .arrow.rotated {
     transform: rotate(90deg);
 }
+
+
+
+/*Style for tabs*/
+.tab-buttons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+}
+
+.tab-button {
+    background-color: #1e3c72;
+    color: white;
+    border: 1px solid #145ea8;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.tab-button.active {
+    background-color: #145ea8;
+}
+
+.tab-panel {
+    display: none;
+}
+
+.tab-panel.active {
+    display: block;
+}
+
+#map {
+    width: 100%;
+    height: 500px;
+    margin: auto;
+    border: 2px solid #1e3c72;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
