--- a/st_flask/templates/index.html
+++ b/st_flask/templates/index.html
@@ -18,7 +18,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='jquery.dataTables.min.css') }}">
 
     <!-- Style for buttons-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='all.min.css') }}">
+    
+    
+    <!-- Icon-->
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+
 
 
 
